--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,12 +1,13 @@
-<nav>
-    {% comment %}
+{% comment %}
     Use the baseurl as a prefix for each link in the navigation data.
     Apply higlight formatting if the URL matches the current page.
-    {% endcomment %}
-
+{% endcomment %}
+<nav>
     {% for item in site.data.navigation %}
-    <a href="{{ item.link | relative_url }}" {% if item.link == page.url %}class="current" {% endif %}>
-        {{ item.name }}
-    </a>
+        <a href="{{ item.link | relative_url }}" 
+           {% if item.link == page.url %}class="current" {% endif %}>
+            {{ item.name }}
+            {% unless forloop.last %}|{% endunless %}
+        </a>
     {% endfor %}
 </nav>
