--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,11 @@
 
 <body>
     <h1>{{ site.title }}</h1>
-
+    
     <!-- Navigation -->
     {% include navigation.html %}
+    
+    <h2>{{ page.title }}</h2>
 
     <!-- Content -->
     {{ content }}
