--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,22 +5,16 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    
-    <title>{{ page.title | default: site.title }}</title>
-    <meta name="description" content="{{ page.description | default: site.description }}">
 
+    {% seo %}
+    
     <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
 
     {% assign resources = page.resources %}
     {% if resources %}
         {% include {{ resources }} %}
     {% endif %}
-    
-    <style>
-       .site-title {
-         font-size: 4em;
-       }
-    </style>
+
 </head>
 
 <body>
