--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,4 @@
-// There might be a better to set the spacing in each framework, like by putting a class on your body tag.
+/* There might be a better to set the spacing in each framework, like by putting a class on your body tag. */
 body {
   padding: 20px;
 }
